raspberry-pi/quarkus/quarkus-getting-started.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-getting-started-deployment
spec:
  selector:
    matchLabels:
      app: quarkus-getting-started
  replicas: 1
  template:
    metadata:
      labels:
        app: quarkus-getting-started
    spec:
      containers:
      - name: quarkus-getting-started
        image: quay.io/thinkahead/quarkus-getting-started:ldd-2.35-arm64 # Ubuntu
        #image: quay.io/thinkahead/quarkus-getting-started:ldd-2.35-fedora-arm64
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 128M
            cpu: 125m
          limits:
            memory: 1024M
            cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
 name: quarkus-getting-started-svc
 labels:
   app: quarkus-getting-started
spec:
 type: NodePort
 ports:
 - port: 8080
   nodePort: 30080
 selector:
   app: quarkus-getting-started
