raspberry-pi/quarkus/quarkus-getting-started-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-getting-started
  name: quarkus-getting-started-route
spec:
  host: quarkus-getting-started-route-quarkus.cluster.local
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-getting-started-svc
    weight: 100
  wildcardPolicy: None
